--- a/templates/_includes/main.njk
+++ b/templates/_includes/main.njk
@@ -1692,6 +1692,7 @@
             font-size: 1rem;
             color: #fff;
             display: block;
+            width: 600px;
             word-break: break-word;
             white-space: pre-wrap;
             overflow-wrap: break-word;
